 * Support more generic file picker intents
 * Update Finnish translations.
 * Update Hungarian translations

KeePassDroid (1.99.4)
 * New Swedish translation from Niclas Burgren
 * Allow adding entries to .kdbx root group (closes: #490)
 * Fix .kdb icon corruption bug (leads to KeePassX segfault)
   (closes: #492)

KeePassDroid (1.99.3)
 * Updated German translations from Meviox
 * Add Finnish translations from Mika Takala
 * Add workaround for broken HTC Linkify
 * Fix .kdbx max items field
 * Fix compressed binary corruption (closes: #486)

KeePassDroid (1.99.2)
 * Fix crash on entries without icons set (closes: #484) 
 * Prevent crash and show warning for Samsung clipboard error
   (closes: #436)

KeePassDroid (1.99.1)
 * Add support for editing advanced strings in .kdbx files
 * Add ability to create new groups in .kdbx files
 * Password generator improvements from Dirk Bergstrom
 * Add support for adding new entries and editing entries in .kdbx files
   (closes: #144)
 * Update Catalan translations (closes: #445)
 * Trim whitespace from queries from josefwells (closes: #467)
 * Updated French transaltions from Nam

KeePassDroid (1.9.18.3)
 * Restore the timeout service, we need it to keep the app in memory long
   enough to clear the clipboard and to remove the notifications.
 * Autolink comment and advanced fields
 * i18n more database error strings
 * Updated Russian translations from I Nedoboy
 * New Catalan translations from Oriol Garrote
 * Remove eye icon on Android >3.0 devices
 * Fix logic for when to display the words Show Password vs. Hide Password

KeePassDroid (1.9.18.2)
 * Updated Dutch translations from Erik Jan Meijer
 * Updated Russian translations from I Nedoboy
 * Add Danish translations from Frederik Svarre

KeePassDroid (1.9.18.1)
 * Fix crash with blank icons

KeePassDroid (1.9.18)
 * Add input types to entry fields
 * Show username in the title list for TAN entries
 * Switch to monospace font for password fields