@@ -33,6 +33,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import android.os.DropBoxManager.Entry;
+
 import com.keepassdroid.crypto.finalkey.FinalKey;
 import com.keepassdroid.crypto.finalkey.FinalKeyFactory;
 import com.keepassdroid.database.exception.InvalidKeyFileException;
@@ -247,21 +249,34 @@ public abstract class PwDatabase {
 		
 		parent.childGroups.add(newGroup);
 		newGroup.setParent(parent);
+		groups.put(newGroup.getId(), newGroup);
+		
+		parent.touch(true, true);
 	}
 	
 	public void removeGroupFrom(PwGroup remove, PwGroup parent) {
 		// Remove group from parent group
 		parent.childGroups.remove(remove);
+		
+		groups.remove(remove.getId());
 	}
 	
 	public void addEntryTo(PwEntry newEntry, PwGroup parent) {
 		// Add entry to parent
-		parent.childEntries.add(newEntry);
+		if (parent != null) {
+			parent.childEntries.add(newEntry);
+		}
+		newEntry.setParent(parent);
+		
+		entries.put(newEntry.getUUID(), newEntry);
 	}
 	
 	public void removeEntryFrom(PwEntry remove, PwGroup parent) {
 		// Remove entry for parent
-		parent.childEntries.remove(remove);
+		if (parent != null) {
+			parent.childEntries.remove(remove);
+		}
+		entries.remove(remove.getUUID());
 	}
 
 	public abstract PwGroupId newGroupId();
@@ -307,5 +322,39 @@ public abstract class PwDatabase {
 		}
 	}
 	
+	public boolean canRecycle(PwGroup group) {
+		return false;
+	}
 	
+	public boolean canRecycle(PwEntry entry) {
+		return false;
+	}
+	
+	public void recycle(PwEntry entry) {
+		// Assume calls to this are protected by calling inRecyleBin
+		throw new RuntimeException("Call not valid for .kdb databases.");
+	}
+	
+	public void undoRecycle(PwEntry entry, PwGroup origParent) {
+		throw new RuntimeException("Call not valid for .kdb databases.");
+	}
+	
+	public void deleteEntry(PwEntry entry) {
+		PwGroup parent = entry.getParent();
+		removeEntryFrom(entry, parent);
+		parent.touch(false, true);
+		
+	}
+	
+	public void undoDeleteEntry(PwEntry entry, PwGroup origParent) {
+		addEntryTo(entry, origParent);
+	}
+	
+	public PwGroup getRecycleBin() {
+		return null;
+	}
+	
+	public boolean isGroupSearchable(PwGroup group, boolean omitBackup) {
+		return group != null;
+	}
 }
