@@ -21,7 +21,10 @@ package com.keepassdroid.search;
 
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
 import java.util.Locale;
+import java.util.Queue;
 
 import android.content.Context;
 import android.content.SharedPreferences;
@@ -30,6 +33,7 @@ import android.util.Log;
 
 import com.android.keepass.R;
 import com.keepassdroid.Database;
+import com.keepassdroid.database.PwDatabase;
 import com.keepassdroid.database.PwDatabaseV3;
 import com.keepassdroid.database.PwDatabaseV4;
 import com.keepassdroid.database.PwEntry;
@@ -51,11 +55,12 @@ public class SearchDbHelper {
 	}
 	
 	public PwGroup search(Database db, String qStr) {
+		PwDatabase pm = db.pm;
 
 		PwGroup group;
-		if ( db.pm instanceof PwDatabaseV3 ) {
+		if ( pm instanceof PwDatabaseV3 ) {
 			group = new PwGroupV3();
-		} else if ( db.pm instanceof PwDatabaseV4 ) {
+		} else if ( pm instanceof PwDatabaseV4 ) {
 			group = new PwGroupV4();
 		} else {
 			Log.d("SearchDbHelper", "Tried to search with unknown db");
@@ -68,25 +73,44 @@ public class SearchDbHelper {
 		Locale loc = Locale.getDefault();
 		qStr = qStr.toLowerCase(loc);
 		boolean isOmitBackup = omitBackup();
-		for (PwEntry entry : db.pm.getEntries()) {
+		
+		Queue<PwGroup> worklist = new LinkedList<PwGroup>();
+		if (pm.rootGroup != null) {
+			worklist.add(pm.rootGroup);
+		}
+		
+		while (worklist.size() != 0) {
+			PwGroup top = worklist.remove();
 			
-			if (!isOmitBackup || !db.pm.isBackup(entry.getParent())) {
-				// Search all strings in the entry
-				Iterator<String> iter = entry.stringIterator();
-				while (iter.hasNext()) {
-					String str = iter.next();
-					if (str != null && str.length() != 0) {
-						String lower = str.toLowerCase(loc);
-						if (lower.contains(qStr)) {
-							group.childEntries.add(entry);
-							break;
-						}
+			if (pm.isGroupSearchable(top, isOmitBackup)) {
+				for (PwEntry entry : top.childEntries) {
+					processEntries(entry, group.childEntries, qStr, loc);
+				}
+				
+				for (PwGroup childGroup : top.childGroups) {
+					if (childGroup != null) {
+						worklist.add(childGroup);
 					}
 				}
 			}
-			
 		}
 		
 		return group;
 	}
+	
+	public void processEntries(PwEntry entry, List<PwEntry> results, String qStr, Locale loc) {
+		// Search all strings in the entry
+		Iterator<String> iter = entry.stringIterator();
+		while (iter.hasNext()) {
+			String str = iter.next();
+			if (str != null && str.length() != 0) {
+				String lower = str.toLowerCase(loc);
+				if (lower.contains(qStr)) {
+					results.add(entry);
+					break;
+				}
+			}
+		}
+	}
+	
 }
